# stremioc

./: CMakeLists.txt  LICENSE  README.md
include/: addon.hpp  addons.hpp  catalog.hpp  logger.hpp  meta.hpp  stream.hpp  stremio.hpp  stremioc.hpp
include/stremioc/: addon.hpp  episode_meta.hpp  logger.hpp  meta.hpp  metadata.hpp  movie.hpp  playable.hpp
src/: addon.cpp  addons.cpp  catalog.cpp  logger.cpp  meta.cpp  stream.cpp  stremio.cpp
src/stremioc/: addon.cpp  episode.cpp  playable.cpp  stremio.cpp
